added link to play2.html

--- a/play.html
+++ b/play.html
@@ -72,6 +72,7 @@
                     <td>$1.66Million</td>
                 </tr>
             </table>
+            <a href="play2.html">click here to play2.html</a>
 
         
 
